--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>调度预警</title>
+    <title>应用准实时进度监控</title>
   </head>
   <body style="background-color:white">
     <noscript>
